--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <audio id="audioPlayer" controls></audio>
     </footer>
 
-    <!-- Firebase 初期化 -->
+    <!-- Firebase 初期化（apiKey を自分のものに差し替え） -->
     <script type="module" src="firebase.js"></script>
     <!-- アプリ本体ロジック -->
     <script type="module" src="main.js"></script>
